Fix extra scrollbar issue

--- a/src/index.css
+++ b/src/index.css
@@ -97,10 +97,12 @@
 
 html {
   scroll-behavior: smooth;
-  overflow-x: hidden;
+  overflow: hidden;
+  height: 100%;
 }
 
 body {
   overflow-x: hidden;
-  overflow-y: scroll;
+  overflow-y: auto;
+  height: 100%;
 }
